--- a/app/views/users/_index.html.erb
+++ b/app/views/users/_index.html.erb
@@ -12,6 +12,15 @@
         <td><%= image_tag user.get_profile_image, size: '50x50' %></td>
         <td><%= user.name %></td>
         <td><%= link_to 'Show', user, class: "user_#{user.id}" %></td>
+        <td>フォロー数: <%= user.relationships.count %></td>
+        <td>フォロワー数: <%= user.reverse_of_relationships.count %></td>
+        <% unless user == current_user %>
+          <% if current_user.following?(user) %>
+          <td><%= link_to "フォローを外す", user_relationships_path(user.id), method: :delete %></td>
+          <% else %>
+          <td><%= link_to "フォローする", user_relationships_path(user.id), method: :post %></td>
+          <% end %>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
