--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -8,8 +8,37 @@
 	  <th>introduction</th>
 	  <th><%= user.introduction %></th>
   </tr>
+  <tr>
+    <th>follows</th>
+    <th>
+      <%= link_to  user_followings_path(user.id) do %>
+      <%= user.relationships.count %>
+      <% end %>
+    </th>
+  </tr>
+  <tr>
+    <th>followers</th>
+    <th>
+      <%= link_to user_followers_path(user.id) do %>
+      <%= user.reverse_of_relationships.count %>
+      <% end %>
+    </th>
+  </tr>
+  <tr>
+    <th>
+      <% unless user == current_user %>
+        <% if current_user.following?(user) %>
+          <td><%= link_to "フォローを外す", user_relationships_path(user.id), method: :delete %></td>
+        <% else %>
+          <td><%= link_to "フォローする", user_relationships_path(user.id), method: :post %></td>
+        <% end %>
+      <% else %>
+          <td></td>
+      <% end %>
+    </th>
+  </tr>
 </table>
-　
+
 <div class='row'>
   <%= link_to edit_user_path(user), class: "btn btn-outline-secondary btn-block edit_user_#{user.id}" do %>
     <i class="fas fa-user-cog"></i>
