--- a/app/views/searches/search.html.erb
+++ b/app/views/searches/search.html.erb
@@ -1,7 +1,7 @@
 <% if @model == 'user' %>
-  <h3>【検索結果】検索ワード： <%= @content %></h3>
+	<h3>Users search for "<%= @content %>"</h3>
   <%= render 'users/index', users: @records %>
-<% else @model == 'book' %>
-  <h3>【検索結果】検索ワード： <%= @content %></h3>
+<% elsif @model == 'book' %>
+	<h3>Books search for "<%= @content %>"</h3>
   <%= render 'books/index', books: @records %>
 <% end %>
